--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -9,11 +9,25 @@
     <script type="module" src="./js/2-snackbar.js"></script>
   </head>
   <body>
-    <load
-      src="./partials/header.html"
-      icon-path="./img/sprite.svg#logo"
-      highlight-curr="active"
-    />
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <a class="nav-logo" href="./index.html" aria-label="Site logo">
+            <svg class="nav-logo-icon" width="100" height="30">
+              <use href="img/sprite.svg#logo"></use>
+            </svg>
+          </a>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="./1-timer.html" class="nav-link">Timer</a>
+            </li>
+            <li class="nav-item">
+              <a href="./2-snackbar.html" class="nav-link active">Snackbar</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
     <main>
       <div class="container">
